Fonts are loaded via Javascript.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<script src="/javascript/webfonts.js"></script>
 	<meta charset="utf-8">
 	<title>Marc-Oliver Teschke | Schauspieler aus Düsseldorf</title>
 	<meta name="description" content="">
 	<meta name="author" content="Marc-Oliver Teschke">
 	<meta name="viewport" content="width=320,initial-scale=1,user-scalable=yes">
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/min/b=stylesheets&f=normalize.css,font-awesome.css,screen.css">
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
