Futzed around with respond.js

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,22 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<script src="/javascript/webfonts.js"></script>
 	<meta charset="utf-8">
 	<title>Marc-Oliver Teschke | Schauspieler aus Düsseldorf</title>
 	<meta name="description" content="">
 	<meta name="author" content="Marc-Oliver Teschke">
 	<meta name="viewport" content="width=320,initial-scale=1,user-scalable=yes">
+	<script src="/javascript/webfonts.js"></script>
 	<!--[if ! lte IE 6]><!-->
-		<link rel="stylesheet" href="/min/b=stylesheets&f=normalize.css,screen.css">
+		<link rel="stylesheet" href="/min/b=stylesheets&amp;f=normalize.css,screen.css" type="text/css">
 	<!--<![endif]-->
-	<!--[if lte IE 6]>
-		<link rel="stylesheet" href="http://universal-ie6-css.googlecode.com/files/ie6.1.1.css" media="screen, projection">
-	<![endif]-->
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<script src="/javascript/respond.min.js"></script>
 </head>
 <body>
 	<header role="banner">
@@ -24,7 +20,7 @@
 		<span class="slogan">Schauspieler aus Düsseldorf</span>
 	</header>
 	<section class="clearfix" id="about">
-		<img src="/images/headshot.jpg"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 		<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 		<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 	</section>
@@ -59,6 +55,7 @@
 	</section>
 	<section id="stage"></section>
 	<div class="clear"></div>
-	<script src="/min/b=javascript&f=jquery.js,stage-scroll.js,galleries-config.js,gallery.js,galleries.js"></script>
+	<script src="/min/b=javascript&amp;f=jquery.js,stage-scroll.js,galleries-config.js,gallery.js,galleries.js"></script>
+	<script src="/javascript/respond.min.js"></script>
 </body>
 </html>
