--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset="utf-8">
 	<title>Marc-Oliver Teschke | Schauspieler aus Düsseldorf</title>
@@ -13,18 +13,18 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+	<script src="/javascript/css3-mediaqueries.js"></script>
 </head>
 <body>
 	<header role="banner">
-		<h1>Marc-Oliver Teschke</h1>
+		<h1><a href="/">Marc-Oliver Teschke</a></h1>
 		<span class="slogan">Schauspieler aus Düsseldorf</span>
 	</header>
-	<section class="clearfix" id="about">
+	<section class="clearfix about">
 		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 		<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 		<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 	</section>
-	
 	<section class="productions">
 		<h3>2012</h3>
 		<section class="production" data-gallery="hamlet2012">
@@ -53,9 +53,15 @@
 			</ul>
 		</section>
 	</section>
-	<section id="stage"></section>
+	<section class="stage"></section>
 	<div class="clear"></div>
+	<footer>
+		<ul>
+			<li>&copy; <?php print date('Y'); ?> Marc-Oliver Teschke</li>
+			<li><a href="impressum.html">Impressum</a></li>
+		</ul>
+	</footer>
 	<script src="/min/b=javascript&amp;f=jquery.js,stage-scroll.js,galleries-config.js,gallery.js,galleries.js"></script>
-	<script src="/javascript/respond.min.js"></script>
+<!--	<script src="/javascript/respond.min.js"></script>-->
 </body>
 </html>
