Added modernizr. Text is hyphenated by browser when available.

--- a/htdocs/impressum.html
+++ b/htdocs/impressum.html
@@ -12,6 +12,7 @@
 	<!--<![endif]-->
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="/javascript/css3-mediaqueries.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -51,6 +52,6 @@
 		<p><em>Quellen: <a href="http://www.e-recht24.de/muster-disclaimer.htm" target="_blank">Disclaimer eRecht24</a>, <a href="http://www.google.com/intl/de_ALL/analytics/tos.html" target="_blank">Google Analytics Datenschutzerklärung</a></em></p>
 	</section>
 	<div class="clear"></div>
-	<script src="/javascript/respond.min.js"></script>
+	<script src="/min/b=javascript&amp;f=modernizr.js"></script>
 </body>
 </html>
