--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="de">
+<html class="no-js" lang="de">
 <head>
 	<meta charset="utf-8">
 	<title>Marc-Oliver Teschke | Schauspieler aus Düsseldorf</title>
 	<meta name="description" content="">
 	<meta name="author" content="Marc-Oliver Teschke">
 	<meta name="viewport" content="width=320,initial-scale=1,user-scalable=yes">
-	<script src="/javascript/webfonts.js"></script>
+	<script src="/min/b=javascript&amp;f=webfonts.js"></script>
 	<!--[if ! lte IE 6]><!-->
 		<link rel="stylesheet" href="/min/b=stylesheets&amp;f=normalize.css,screen.css" type="text/css">
 	<!--<![endif]-->
@@ -21,9 +21,9 @@
 		<span class="slogan">Schauspieler aus Düsseldorf</span>
 	</header>
 	<section class="clearfix about">
-		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-		<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-		<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
+		<p>Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.</p>
+		<p>Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht?</p>
 	</section>
 	<section class="productions">
 		<h3>2012</h3>
@@ -61,7 +61,6 @@
 			<li><a href="impressum.html">Impressum</a></li>
 		</ul>
 	</footer>
-	<script src="/min/b=javascript&amp;f=jquery.js,stage-scroll.js,galleries-config.js,gallery.js,galleries.js"></script>
-<!--	<script src="/javascript/respond.min.js"></script>-->
+	<script src="/min/b=javascript&amp;f=modernizr.js,jquery.js,stage-scroll.js,galleries-config.js,gallery.js,galleries.js"></script>
 </body>
 </html>
