Big-ass header!
h1 font-size in the header is now huuuge!

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,7 +18,7 @@
 <body>
 	<header role="banner">
 		<h1><a href="/">Marc-Oliver Teschke</a></h1>
-		<span class="slogan">Schauspieler aus Düsseldorf</span>
+		<!--<span class="slogan">Schauspieler aus Düsseldorf</span>-->
 	</header>
 	<section class="clearfix about">
 		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
