--- a/htdocs/impressum.html
+++ b/htdocs/impressum.html
@@ -18,7 +18,7 @@
 <body>
 	<header role="banner">
 		<h1><a href="/">Marc-Oliver Teschke</a></h1>
-		<span class="slogan">Schauspieler aus Düsseldorf</span>
+		<!--<span class="slogan">Schauspieler aus Düsseldorf</span>-->
 	</header>
 	<section class="clearfix impressum">
 		<h1>Impressum</h1>
