Removed webfonts.js, added footer.

--- a/htdocs/impressum.html
+++ b/htdocs/impressum.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="">
 	<meta name="author" content="Marc-Oliver Teschke">
 	<meta name="viewport" content="width=320,initial-scale=1,user-scalable=yes">
-	<script src="/javascript/webfonts.js"></script>
 	<!--[if ! lte IE 6]><!-->
 		<link rel="stylesheet" href="/min/b=stylesheets&amp;f=normalize.css,screen.css" type="text/css">
 	<!--<![endif]-->
@@ -52,6 +51,12 @@
 		<p><em>Quellen: <a href="http://www.e-recht24.de/muster-disclaimer.htm" target="_blank">Disclaimer eRecht24</a>, <a href="http://www.google.com/intl/de_ALL/analytics/tos.html" target="_blank">Google Analytics Datenschutzerklärung</a></em></p>
 	</section>
 	<div class="clear"></div>
+	<footer>
+		<ul>
+			<li>&copy; <?php print date('Y'); ?> Marc-Oliver Teschke</li>
+			<li><a href="impressum.html">Impressum</a></li>
+		</ul>
+	</footer>
 	<script src="/min/b=javascript&amp;f=modernizr.js"></script>
 </body>
 </html>
