--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="">
 	<meta name="author" content="Marc-Oliver Teschke">
 	<meta name="viewport" content="width=320,initial-scale=1,user-scalable=yes">
-	<script src="/min/b=javascript&amp;f=webfonts.js"></script>
 	<!--[if ! lte IE 6]><!-->
 		<link rel="stylesheet" href="/min/b=stylesheets&amp;f=normalize.css,screen.css" type="text/css">
 	<!--<![endif]-->
@@ -21,14 +20,29 @@
 		<!--<span class="slogan">Schauspieler aus Düsseldorf</span>-->
 	</header>
 	<section class="clearfix about">
-		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg"><p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
+		<img alt="Headshot Marc-Oliver Teschke" src="/images/headshot.jpg">
+		<ul class="stats">
+			<li><label>Geburtstag</label>19.03.1984</li>
+			<li><label>Spielalter</label>???</li>
+			<li><label>Geburtsort</label>Celle</li>
+			<li><label>Größe</label>1,84 m</li>
+			<li><label>Figur</label>schlank, sportlich</li>
+			<li><label>Augenfarbe</label>braun</li>
+			<li><label>Haarfarbe</label>braun</li>
+			<li><label>Sprachen</label>Deutsch, Englisch</li>
+		</ul>
+		<p>Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können. Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen?</p>
 		<p>Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht? Auch gibt es niemanden, der den Schmerz an sich liebt, sucht oder wünscht, nur, weil er Schmerz ist, es sei denn, es kommt zu zufälligen Umständen, in denen Mühen und Schmerz ihm große Freude bereiten können.</p>
 		<p>Um ein triviales Beispiel zu nehmen, wer von uns unterzieht sich je anstrengender körperlicher Betätigung, außer um Vorteile daraus zu ziehen? Aber wer hat irgend ein Recht, einen Menschen zu tadeln, der die Entscheidung trifft, eine Freude zu genießen, die keine unangenehmen Folgen hat, oder einen, der Schmerz vermeidet, welcher keine daraus resultierende Freude nach sich zieht?</p>
 	</section>
 	<section class="productions">
+		<h1>Arbeit & Galerien</h1>
+		<section class="production" data-gallery="headshots">
+			<span class="gallery-indicator"></span><h4>Headshots</h4>
+		</section>
 		<h3>2012</h3>
 		<section class="production" data-gallery="hamlet2012">
-			<h4>Hamlet</h4>
+			<span class="gallery-indicator"></span><h4>Hamlet</h4>
 			<ul>
 				<li><label>Rolle</label> Hamlet</li>
 				<li><label>Theater</label> <a href="http://www.gesang-und-schauspiel.de/" target="_blank">Regenesis Studio</a></li>
@@ -37,7 +51,7 @@
 		</section>
 		<h3>2011</h3>
 		<section class="production" data-gallery="wasihrwollt2011">
-			<h4>Was ihr wollt</h4>
+			<span class="gallery-indicator"></span><h4>Was ihr wollt</h4>
 			<ul>
 				<li><label>Rolle</label> Valentin, Antonio</li>
 				<li><label>Theater</label> <a href="http://www.amateurtheater-nrw.de/" target="_blank">Amateurtheaterverband NRW</a></li>
@@ -45,7 +59,7 @@
 			</ul>
 		</section>
 		<section class="production" data-gallery="einewochevollersamstage2011">
-			<h4>Eine Woche voller Samstage</h4>
+			<span class="gallery-indicator"></span><h4>Eine Woche voller Samstage</h4>
 			<ul>
 				<li><label>Rolle</label> Herr Taschenbier</li>
 				<li><label>Theater</label> <a href="http://www.unterfeldmaeuse.de/" target="_blank">Unterfeldmäuse Erkrath</a></li>
